set up questions WIP

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@mui/material": "^5.15.20",
     "@mui/styles": "^5.15.20",
     "@testing-library/react": "^13.4.0",
+    "antd": "^5.19.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
