--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mentorprenuer",
+  "homepage": "http://webapp.mentorprenuer.net/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,11 +16,13 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
